--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
     "tailwindcss": "^3.3.0",
     "vite": "latest"
   },
-  "homepage": "https://arijitmukherjee.github.io"
+  "homepage": "https://ariji1.github.io/arijitmukherjee.github.io/"
 }
