--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "build": "node ./node_modules/vite/bin/vite.js build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@radix-ui/react-slot": "latest",
