--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,13 +24,12 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install
-          npm install -g vite@latest
+          npm ci
+          npx vite -v
 
       - name: Build
         run: |
-          npm install
-          CI=false npm run build
+          npx vite build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
