--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "latest",
+    "@radix-ui/react-slot": "^1.0.2",
     "framer-motion": "^12.23.12",
-    "lucide-react": "^0.543.0"
+    "lucide-react": "^0.543.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^5.0.2",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.21",
-    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "tailwindcss": "^3.3.0",
-    "vite": "latest"
+    "vite": "^5.1.4"
   },
   "homepage": "https://ariji1.github.io/arijitmukherjee.github.io/"
 }
